--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PGHOST=dpg-csi708tds78s73ef2580-a.singapore-postgres.render.com
+PGHOST=dpg-csi708tds78s73ef2580-a.singapore-postgres.render.com #hostnameにsingapore-postgres.render.comを付け加える
 PGPORT=5432
 PGUSER=yuta
-PGPASSWORD=SaQagYe2ClEl6F29bXyJlPrHWFPZxoBb
+PGPASSWORD=SaQagYe2ClEl6F29bXyJlPrHWFPZxoBb #renderのpassword
 PGDATABASE=karadanipi_su_db
