--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PGHOST=ddpg-cu3jr2pu0jms73dl2pog-a.singapore-postgres.render.com #hostnameにsingapore-postgres.render.comを付け加える
+PGHOST=dpg-cumkekpu0jms73c9bv3g-a.singapore-postgres.render.com #hostnameにsingapore-postgres.render.comを付け加える
 PGPORT=5432
-PGUSER=karadanipi_su_db_3_user
-PGPASSWORD=g3OU4nNVBEvMVoB8i7asjDQM7X9Bugap#renderのpassword
-PGDATABASE=karadanipi_su_db_3
+PGUSER=yuta
+PGPASSWORD=CWO6g2GpLAbL24lMFTC8hU4X20x5dPCw#renderのpassword
+PGDATABASE=karadanipi_su_db_3_8s2p
